# py-shannon

./: .gitignore  Pipfile  README.md  setup.cfg  test_shannon.py
shannon/: __init__.py  shannon.py
