[metadata]
name = py-shannon
version = 1.0.0
author = Kuba Szczodrzyński
author_email = kuba@szczodrzynski.pl
description = Python implementation of the Shannon stream cipher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TOPDapp/py-shannon
project_urls =
    Bug Tracker = https://github.com/TOPDapp/py-shannon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
